Update DEFINE_PREBID_GLOBAL. REVSYS-2030 #time 20m

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prebid"
   ],
   "globalVarName": "pbjs",
-  "defineGlobal": true,
+  "defineGlobal": "1",
   "author": "the prebid.js contributors",
   "license": "Apache-2.0",
   "engines": {
